# first-render

./: .gitignore  CMakeLists.txt  readme.md
include/: camera.h  firstrender.h  hit.h  m_embree.h  material.h  material_factory.h  mesh.h  model.h  my_stb_image.h  object.h  onb.h  pdf.h  ppm.h  ray.h  scene.h  texture.h  utils.h
src/: camera.cpp  m_embree.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  my_stb_image.cpp  object.cpp  onb.cpp  pdf.cpp  ppm.cpp  scene.cpp  texture.cpp  utils.cpp
